<resources>
    <string name="app_name">MyProject</string>

    <string name="toast_empty_word">검색어를 입력해주세요.</string>
    <string name="toast_empty_result">검색 결과가 없습니다.</string>
    <string name="toast_empty_movie_search_history">영화 검색 기록이 없습니다.</string>
    <string name="toast_empty_book_search_history">책 검색 기록이 없습니다.</string>
    <string name="toast_empty_blog_search_history">블로그 검색 기록이 없습니다.</string>
    <string name="toast_empty_news_search_history">뉴스 검색 기록이 없습니다.</string>
    <string name="toast_network_error_msg">네트워크 통신 장애입니다.</string>
    <string name="btn_search">검색</string>
    <string name="btn_history">검색기록</string>
    <string name="btn_movie">영화</string>
    <string name="btn_movie_history">영화\n검색기록</string>
    <string name="btn_book">책</string>
    <string name="btn_book_history">책\n검색기록</string>
    <string name="btn_blog">블로그</string>
    <string name="btn_blog_history">블로그\n검색기록</string>
    <string name="btn_news">뉴스</string>
    <string name="btn_news_history">뉴스\n검색기록</string>

    <string name="image_content_description">영화 포스터 또는 책 표지 이미지입니다.</string>
    <string name="input_search_hint">검색어를 입력해주세요.</string>

</resources>
