<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.practice.achitecture.myproject.enums.SearchType" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.practice.achitecture.myproject.main.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/btn_text_white"
            android:orientation="vertical"
            tools:context=".main.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_search_sth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/input_search_hint"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:onEditorAction="@{(view,actionId,event)-> viewModel.onEditorAction(view,actionId,event)}"
                    android:text="@={viewModel.query}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/btn_search_background"
                    android:onClick="@{()-> viewModel.search()}"
                    android:text="@string/btn_search"
                    android:textColor="@color/btn_text_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="@{()->viewModel.goToHistoryActivity()}"
                    android:text="@string/btn_history"
                    android:textColor="@color/btn_text_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_searched_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                bind:setItemList="@{viewModel.movieOrBookItems}"
                bind:setSearchType="@{viewModel.lastSearchType}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_type_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="#FF6E40"
                    android:onClick="@{()-> viewModel.search(SearchType.MOVIE)}"
                    android:text="@string/btn_movie"
                    android:textColor="@color/btn_text_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_type_book"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="#FF6E40"
                    android:onClick="@{()-> viewModel.search(SearchType.BOOK)}"
                    android:text="@string/btn_book"
                    android:textColor="@color/btn_text_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_type_blog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/bottom_menu_background"
                    android:onClick="@{()-> viewModel.search(SearchType.BLOG)}"
                    android:text="@string/btn_blog"
                    android:textColor="@color/btn_text_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_type_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FF6E40"
                    android:onClick="@{()-> viewModel.search(SearchType.NEWS)}"
                    android:text="@string/btn_news"
                    android:textColor="@color/btn_text_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.eventProgressBarIsShowing? View.VISIBLE : View.GONE}" />

    </FrameLayout>
</layout>