<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history.HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/btn_text_white"
        android:orientation="vertical"
        tools:context=".main.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_searched_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search_type_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/btn_movie_history"
                android:textColor="@color/btn_text_white"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search_type_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/btn_book_history"
                android:textColor="@color/btn_text_white"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search_type_blog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/btn_blog_history"
                android:textColor="@color/btn_text_white"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search_type_news"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/btn_news_history"
                android:textColor="@color/btn_text_white"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>